--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,36 +2,69 @@ name: Docker CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - '*'  # Run on all branches
   pull_request:
-    branches: [ main ]
+    branches: 
+      - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
     
     - name: Login to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
     
-    - name: Build and push
-      uses: docker/build-push-action@v2
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
-        
-    - name: Test container
+    
+    - name: Test Docker container
       run: |
+        echo "Pulling Docker image..."
         docker pull ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+        
+        echo "Starting container for testing..."
         docker run -d -p 5000:5000 --name test-container ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
-        sleep 5
-        curl http://localhost:5000
+        
+        echo "Waiting for application to start..."
+        sleep 15
+        
+        echo "Container status:"
+        docker ps -a
+        
+        echo "Container logs:"
+        docker logs test-container
+        
+        echo "Testing connection to application:"
+        curl -v http://localhost:5000 || echo "Failed to connect to application"
+        
+        # Check if container is still running
+        CONTAINER_RUNNING=$(docker inspect -f '{{.State.Running}}' test-container)
+        if [ "$CONTAINER_RUNNING" != "true" ]; then
+          echo "Container is not running! Checking exit code..."
+          EXIT_CODE=$(docker inspect -f '{{.State.ExitCode}}' test-container)
+          echo "Container exited with code $EXIT_CODE"
+          exit 1
+        fi
+        
+        # If we got here and curl failed, still fail the workflow
+        if ! curl -s http://localhost:5000 > /dev/null; then
+          echo "Application is not responding on port 5000"
+          exit 1
+        fi
+        
+        echo "Test successful!"
