--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,15 @@
-name: Docker CI/CD
+name: Docker CI/CD with Versioning
 
 on:
   push:
     branches: 
-      - '*'  # Run on all branches
+      - '*'
   pull_request:
     branches: 
       - main
+
+env:
+  VERSION_FILE: version.txt
 
 jobs:
   build-and-push:
@@ -15,6 +18,21 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for proper versioning
+    
+    - name: Get current version
+      id: version
+      run: |
+        if [ -f "${{ env.VERSION_FILE }}" ]; then
+          current_version=$(cat "${{ env.VERSION_FILE }}")
+          echo "Current version: $current_version"
+        else
+          current_version="1.0.0"
+          echo "No version file found. Starting with version: $current_version"
+          echo "$current_version" > "${{ env.VERSION_FILE }}"
+        fi
+        echo "current_version=$current_version" >> $GITHUB_OUTPUT
     
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -27,44 +45,35 @@ jobs:
     
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
+      id: build_push
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.current_version }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
     
-    - name: Test Docker container
+    - name: Increment version on successful build
+      if: success()
+      id: increment_version
       run: |
-        echo "Pulling Docker image..."
-        docker pull ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+        # Parse current version
+        current_version="${{ steps.version.outputs.current_version }}"
+        IFS='.' read -r major minor patch <<< "$current_version"
         
-        echo "Starting container for testing..."
-        docker run -d -p 5000:5000 --name test-container ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+        # Increment patch version
+        new_patch=$((patch + 1))
+        new_version="$major.$minor.$new_patch"
         
-        echo "Waiting for application to start..."
-        sleep 15
-        
-        echo "Container status:"
-        docker ps -a
-        
-        echo "Container logs:"
-        docker logs test-container
-        
-        echo "Testing connection to application:"
-        curl -v http://localhost:5000 || echo "Failed to connect to application"
-        
-        # Check if container is still running
-        CONTAINER_RUNNING=$(docker inspect -f '{{.State.Running}}' test-container)
-        if [ "$CONTAINER_RUNNING" != "true" ]; then
-          echo "Container is not running! Checking exit code..."
-          EXIT_CODE=$(docker inspect -f '{{.State.ExitCode}}' test-container)
-          echo "Container exited with code $EXIT_CODE"
-          exit 1
-        fi
-        
-        # If we got here and curl failed, still fail the workflow
-        if ! curl -s http://localhost:5000 > /dev/null; then
-          echo "Application is not responding on port 5000"
-          exit 1
-        fi
-        
-        echo "Test successful!"
+        echo "New version: $new_version"
+        echo "$new_version" > "${{ env.VERSION_FILE }}"
+        echo "new_version=$new_version" >> $GITHUB_OUTPUT
+    
+    - name: Commit and push version update
+      if: success() && github.event_name == 'push'
+      run: |
+        git config --global user.name 'GitHub Actions'
+        git config --global user.email 'actions@github.com'
+        git add "${{ env.VERSION_FILE }}"
+        git commit -m "Bump version to ${{ steps.increment_version.outputs.new_version }}"
+        git push
