--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # Fetch all history for proper versioning
+        fetch-depth: 0
+        token: ${{ secrets.GH_PAT }}  # Use your PAT for checkout
     
     - name: Get current version
       id: version
@@ -76,4 +77,6 @@ jobs:
         git config --global user.email 'actions@github.com'
         git add "${{ env.VERSION_FILE }}"
         git commit -m "Bump version to ${{ steps.increment_version.outputs.new_version }}"
-        git push
+        
+        # Use the token to push changes
+        git push https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
