--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,14 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # This is crucial for writing to the repository
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0
-        token: ${{ secrets.GH_PAT }}  # Use your PAT for checkout
+        fetch-depth: 0  # Fetch all history for proper versioning
     
     - name: Get current version
       id: version
@@ -72,11 +73,56 @@ jobs:
     
     - name: Commit and push version update
       if: success() && github.event_name == 'push'
-      run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@github.com'
-        git add "${{ env.VERSION_FILE }}"
-        git commit -m "Bump version to ${{ steps.increment_version.outputs.new_version }}"
-        
-        # Use the token to push changes
-        git push https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const fs = require('fs');
+          const { repo, owner } = context.repo;
+          
+          // Get the current branch name
+          const branch = context.ref.replace('refs/heads/', '');
+          
+          // Get the new version
+          const newVersion = '${{ steps.increment_version.outputs.new_version }}';
+          
+          // Get the current commit SHA
+          const currentSha = context.sha;
+          
+          // Read the version file content
+          const versionContent = fs.readFileSync('${{ env.VERSION_FILE }}', 'utf8');
+          
+          // Create or update the file in the repository
+          await github.rest.repos.createOrUpdateFileContents({
+            owner,
+            repo,
+            path: '${{ env.VERSION_FILE }}',
+            message: `Bump version to ${newVersion}`,
+            content: Buffer.from(versionContent).toString('base64'),
+            branch,
+            committer: {
+              name: 'GitHub Actions',
+              email: 'actions@github.com'
+            },
+            author: {
+              name: 'GitHub Actions',
+              email: 'actions@github.com'
+            },
+            sha: await getFileSha(github, owner, repo, '${{ env.VERSION_FILE }}', branch)
+          });
+          
+          // Helper function to get file SHA (needed for updating existing files)
+          async function getFileSha(github, owner, repo, path, branch) {
+            try {
+              const { data } = await github.rest.repos.getContent({
+                owner,
+                repo,
+                path,
+                ref: branch
+              });
+              return data.sha;
+            } catch (error) {
+              // File doesn't exist yet
+              return null;
+            }
+          }
