--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker CI/CD with Versioning
+name: Docker CI/CD with Versioning and Kubernetes Deployment
 
 on:
   push:
@@ -12,62 +12,73 @@ env:
   VERSION_FILE: version.txt
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    
-    - name: Get current version
-      id: version
-      run: |
-        if [ -f "${{ env.VERSION_FILE }}" ]; then
-          current_version=$(cat "${{ env.VERSION_FILE }}")
-          echo "Current version: $current_version"
-        else
-          current_version="1.0.0"
-          echo "No version file found. Starting with version: $current_version"
-        fi
-        
-        # Store current version for reference
-        echo "current_version=$current_version" >> $GITHUB_OUTPUT
-        
-        # Increment version BEFORE building the image
-        IFS='.' read -r major minor patch <<< "$current_version"
-        new_patch=$((patch + 1))
-        new_version="$major.$minor.$new_patch"
-        echo "New version: $new_version"
-        
-        # Update version file with new version
-        echo "$new_version" > "${{ env.VERSION_FILE }}"
-        echo "new_version=$new_version" >> $GITHUB_OUTPUT
-    
-    - name: Commit version update
-      if: github.event_name == 'push'
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: "Bump version to ${{ steps.version.outputs.new_version }}"
-        file_pattern: "${{ env.VERSION_FILE }}"
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
-          ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Get current version
+        id: version
+        run: |
+          if [ -f "${{ env.VERSION_FILE }}" ]; then
+            current_version=$(cat "${{ env.VERSION_FILE }}")
+            echo "Current version: $current_version"
+          else
+            current_version="1.0.0"
+            echo "No version file found. Starting with version: $current_version"
+          fi
+
+          # Store current version for reference
+          echo "current_version=$current_version" >> $GITHUB_OUTPUT
+
+          # Increment version BEFORE building the image
+          IFS='.' read -r major minor patch <<< "$current_version"
+          new_patch=$((patch + 1))
+          new_version="$major.$minor.$new_patch"
+          echo "New version: $new_version"
+
+          # Update version file with new version
+          echo "$new_version" > "${{ env.VERSION_FILE }}"
+          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+
+      - name: Commit version update
+        if: github.event_name == 'push'
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Bump version to ${{ steps.version.outputs.new_version }}"
+          file_pattern: "${{ env.VERSION_FILE }}"
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+
+      - name: Update Kubernetes deployment image tag
+        run: |
+          sed -i "s|\(image: .*/my-flask-app:\).*|\1${{ steps.version.outputs.new_version }}|" kubernetes/deployment.yaml
+
+      - name: Commit updated deployment.yaml
+        if: github.event_name == 'push'
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Update deployment to ${{ steps.version.outputs.new_version }}"
+          file_pattern: "kubernetes/deployment.yaml"
