--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,3 +71,15 @@ jobs:
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+
+
+      - name: Update Kubernetes deployment image tag
+        run: |
+          sed -i "s|\(image: .*/my-flask-app:\).*|\1${{ steps.version.outputs.new_version }}|" kubernetes/deployment.yaml
+
+      - name: Commit updated deployment.yaml
+        if: github.event_name == 'push'
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Update deployment to ${{ steps.version.outputs.new_version }}"
+          file_pattern: "kubernetes/deployment.yaml"
