--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker CI/CD with Versioning
+name: CI/CD with Versioning
 
 on:
   push:
@@ -73,13 +73,13 @@ jobs:
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
 
 
-      - name: Update Kubernetes deployment image tag
-        run: |
-          sed -i "s|\(image: .*/my-flask-app:\).*|\1${{ steps.version.outputs.new_version }}|" kubernetes/deployment.yaml
+    - name: Update Kubernetes deployment image tag
+      run: |
+        sed -i "s|\(image: .*/my-flask-app:\).*|\1${{ steps.version.outputs.new_version }}|" kubernetes/deployment.yaml
 
-      - name: Commit updated deployment.yaml
-        if: github.event_name == 'push'
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Update deployment to ${{ steps.version.outputs.new_version }}"
-          file_pattern: "kubernetes/deployment.yaml"
+    - name: Commit updated deployment.yaml
+      if: github.event_name == 'push'
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "Update deployment to ${{ steps.version.outputs.new_version }}"
+        file_pattern: "kubernetes/deployment.yaml"
