--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,6 +81,9 @@ jobs:
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
 
+          ghcr.io/${{ github.repository_owner }}/my-flask-app:${{ steps.version.outputs.new_version }}
+          ghcr.io/${{ github.repository_owner }}/my-flask-app:latest
+
 
     - name: Update Kubernetes deployment image tag
       run: |
