--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,11 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.git_PAT }}
 
+    - name: Set lowercased owner             #GITHUB username lower letter
+      id: vars
+      run: echo "owner_lc=${OWNER,,}" >> $GITHUB_OUTPUT
+      env:
+        OWNER: ${{ github.repository_owner }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -81,8 +86,8 @@ jobs:
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
 
-          ghcr.io/${{ lower(github.repository_owner) }}/my-flask-app:${{ steps.version.outputs.new_version }}
-          ghcr.io/${{ lower(github.repository_owner) }}/my-flask-app:latest
+          ghcr.io/${{ steps.vars.outputs.owner_lc }}/my-flask-app:${{ steps.version.outputs.new_version }}
+          ghcr.io/${{ steps.vars.outputs.owner_lc }}/my-flask-app:latest
 
 
     - name: Update Kubernetes deployment image tag
