--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: toes4n
+        username: toesan
         password: ${{ secrets.git_PAT }}
 
     - name: Set up Docker Buildx
