--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
       with:
         registry: ghcr.io
         username: toesan
-        password: ${{ secrets.git_PAT }}
+        password: ${{ secrets.GIT_PAT }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
