--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: toesan
-        password: ${{ secrets.GIT_PAT }}
+        username: toesan-devcloud
+        password: ${{ secrets.GIT_PAT}}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -80,8 +80,8 @@ jobs:
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
 
-          ghcr.io/${{ github.repository_owner }}/my-flask-app:${{ steps.version.outputs.new_version }}
-          ghcr.io/${{ github.repository_owner }}/my-flask-app:latest
+          ghcr.io/toes4n/my-flask-app:${{ steps.version.outputs.new_version }}
+          ghcr.io/toes4n/my-flask-app:latest
 
     - name: Update Kubernetes deployment image tag
       run: |
