--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: 
       - main
-      
+
 env:
   VERSION_FILE: version.txt
 
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      id-token: write
   
     steps:
     - name: Checkout code
@@ -65,8 +66,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: toesan-devcloud
-        password: ${{ secrets.GIT_PAT}}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_PAT }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -79,9 +80,8 @@ jobs:
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:${{ steps.version.outputs.new_version }}
           ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
-
-          ghcr.io/toes4n/my-flask-app:${{ steps.version.outputs.new_version }}
-          ghcr.io/toes4n/my-flask-app:latest
+          ghcr.io/${{ github.actor }}/my-flask-app:${{ steps.version.outputs.new_version }}
+          ghcr.io/${{ github.actor }}/my-flask-app:latest
 
     - name: Update Kubernetes deployment image tag
       run: |
