--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,14 @@ jobs:
       with:
         commit_message: "Bump version to ${{ steps.version.outputs.new_version }}"
         file_pattern: "${{ env.VERSION_FILE }}"
+
+    - name: Debug secrets
+      run: |
+        echo "Docker Hub username length: ${#DOCKERHUB_USERNAME}"
+        echo "Docker Hub token length: ${#DOCKERHUB_TOKEN}"
+      env:
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -67,7 +75,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_PAT }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
