--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: toesan-devcloud
         password: ${{ secrets.GIT_DEV }}
 
     - name: Set up Docker Buildx
