--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: toesan-devcloud
+        password: ${{ secrets.GIT_DEV }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
