--- a/kubernetes/dev/deployment.yaml
+++ b/kubernetes/dev/deployment.yaml
@@ -38,7 +38,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: flask-app-private-ingress  #application ingress name
+  name: flask-app-ingress  #application ingress name
 spec:
   ingressClassName: alb #Public Ingress Class # (alb-private) Private Ingress Class
   rules:
