--- a/kubernetes/oci/hpa.yaml
+++ b/kubernetes/oci/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: flask-app-hpa
-  namespace: outlet
+  namespace: default
   labels:
     app: flask-app
 spec:
