--- a/kubernetes/oci/deployment.yaml
+++ b/kubernetes/oci/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: flask-app      #container name
-          image: ghcr.io/toes4n/my-flask-app:1.0.37
+          image: toes4n/my-flask-app:1.0.44
           ports:
             - containerPort: 5000
 
