--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,4 +86,4 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: "Update deployment to ${{ steps.version.outputs.new_version }}"
-        file_pattern: "kubernetes/deployment.yaml"
+        file_pattern: "kubernetes/oci/deployment.yaml"
