--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-flask==2.0.1
+# Core dependencies
+Flask==3.1.0
+Werkzeug==3.1.3
+
+# Web server
+gunicorn==21.2.0
+
+# Optional but common
+python-dotenv==1.0.0
+
