--- a/kubernetes/oci/deployment.yaml
+++ b/kubernetes/oci/deployment.yaml
@@ -19,6 +19,13 @@ spec:
           image: ghcr.io/toesan-devcloud/my-flask-app:1.0.65
           ports:
             - containerPort: 5000
+          resources:
+            limits:
+              cpu: "0.5"
+              memory: "512Mi"
+            requests:
+              cpu: "0.2"
+              memory: "256Mi"
 
 ---
 apiVersion: v1
